agrgados datos de db remota

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost/dot_db
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://db4free.net/db_dot
+spring.datasource.username=njsocode
+spring.datasource.password=92729272
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
