--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ spring.datasource.password=92729272
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.generate-ddl=true
+#spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
+
+#spring.mvc.view.prefix=/WEB-INF/jsp
+#spring.mvc.view.suffix=.jsp
