--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=92729272
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #spring.mvc.view.prefix=/WEB-INF/jsp
 #spring.mvc.view.suffix=.jsp
